--- a/Game_Portal/src/main/resources/application.properties
+++ b/Game_Portal/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.name=gameportal
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.security.user.name=admin
+spring.security.user.password=admin
